tests/error/poly_errors/polymorphic_decl.err
Error: Invalid entry point (at $FILE:14:0)
   | 
12 | 
13 | @guppy.declare
14 | def main(_: Struct[F]) -> float: ...
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Value `main` is not a valid compilation entry point since
   |                                      the value of its generic parameter `F` is not known

Guppy compilation failed due to 1 previous error
